--- a/src/main/resources/assets/kekztech/lang/en_US.lang
+++ b/src/main/resources/assets/kekztech/lang/en_US.lang
@@ -174,3 +174,6 @@ tile.kekztech_spaceelevatortether_block.name=Space Elevator Tether
 
 # -------- Cosmetic Blocks
 tile.kekztech_largehextile_block=Large Hex Tile
+
+# -------- Beam Transmitter
+tile.kekztech_beamtransmitter_block=Beam Transmitter
