Expand Tesla tiers
We now have ZPM Tier primary coils and LuV and ZPM tier capacitors, props to the madlads at the BigFlex MegaPlex for planning on using it with their fusion reactors

--- a/src/main/resources/assets/tectech/lang/en_US.lang
+++ b/src/main/resources/assets/tectech/lang/en_US.lang
@@ -64,6 +64,8 @@ item.tm.teslaCoilCapacitor.1.name=MV Tesla Capacitor
 item.tm.teslaCoilCapacitor.2.name=HV Tesla Capacitor
 item.tm.teslaCoilCapacitor.3.name=EV Tesla Capacitor
 item.tm.teslaCoilCapacitor.4.name=IV Tesla Capacitor
+item.tm.teslaCoilCapacitor.5.name=LuV Tesla Capacitor
+item.tm.teslaCoilCapacitor.6.name=ZPM Tesla Capacitor
 item.tm.teslaCoilCapacitor.desc.0=Stores
 item.tm.teslaCoilCapacitor.desc.1=EU in a tesla tower at
 item.tm.teslaCoilCapacitor.desc.2=Yeet this broken item into some spicy water!
@@ -518,6 +520,7 @@ gt.blockcasingsBA0.2.name=HV Superconductor Primary Tesla Windings
 gt.blockcasingsBA0.3.name=EV Superconductor Primary Tesla Windings
 gt.blockcasingsBA0.4.name=IV Superconductor Primary Tesla Windings
 gt.blockcasingsBA0.5.name=LuV Superconductor Primary Tesla Windings
+gt.blockcasingsBA0.9.name=ZPM Superconductor Primary Tesla Windings
 gt.blockcasingsBA0.0.desc.0=Handles up to
 gt.blockcasingsBA0.0.desc.1=What one man calls God, another calls the laws of physics.
 gt.blockcasingsBA0.6.name=Tesla Base Casing
