--- a/src/main/resources/assets/kekztech/lang/en_US.lang
+++ b/src/main/resources/assets/kekztech/lang/en_US.lang
@@ -177,3 +177,13 @@ tile.kekztech_largehextile_block=Large Hex Tile
 
 # -------- Beam Transmitter
 tile.kekztech_beamtransmitter_block=Beam Transmitter
+
+# -------- Achievements
+achievement.tile.kekztech_lapotronicenergyunit_block.2.desc=Pickup this item to see the recipe in NEI
+achievement.tile.kekztech_lapotronicenergyunit_block.2=Lapotronic Capacitor (LuV)
+achievement.tile.kekztech_lapotronicenergyunit_block.3.desc=Pickup this item to see the recipe in NEI
+achievement.tile.kekztech_lapotronicenergyunit_block.3=Lapotronic Capacitor (ZPM)
+achievement.tile.kekztech_lapotronicenergyunit_block.4.desc=Pickup this item to see the recipe in NEI
+achievement.tile.kekztech_lapotronicenergyunit_block.4=Lapotronic Capacitor (UV)
+achievement.tile.kekztech_lapotronicenergyunit_block.5.desc=Pickup this item to see the recipe in NEI
+achievement.tile.kekztech_lapotronicenergyunit_block.5=Ultimate Capacitor (UHV)
