Add recipe for debug maint hatch (#47)
* Add recipe for debug maint hatch

* Change name/description of the debug maint hatch

* Reduced components

* Reduce tape amount

* Revert joke description

* Revert the comment too

--- a/src/main/resources/assets/tectech/lang/en_US.lang
+++ b/src/main/resources/assets/tectech/lang/en_US.lang
@@ -775,8 +775,8 @@ gt.blockmachines.debug.tt.data.name=Debug Data Hatch
 gt.blockmachines.debug.tt.data.desc.0=Quantum Data Output
 gt.blockmachines.debug.tt.data.desc.1=High speed fibre optics connector.
 gt.blockmachines.debug.tt.data.desc.2=Must be painted to work
-gt.blockmachines.debug.tt.maintenance.name=Debug Maintenance Hatch
-gt.blockmachines.debug.tt.maintenance.desc.0=For maintaining Multiblocks
+gt.blockmachines.debug.tt.maintenance.name=Auto-Taping Maintenance Hatch
+gt.blockmachines.debug.tt.maintenance.desc.0=For automatically maintaining Multiblocks
 gt.blockmachines.debug.tt.maintenance.desc.1=Does fix everything but itself.
 gt.blockmachines.debug.tt.maintenance.desc.2=Fixing is for plebs!
 gt.blockmachines.debug.tt.genny.name=Debug Power Generator
