--- a/src/main/resources/assets/kekztech/lang/en_US.lang
+++ b/src/main/resources/assets/kekztech/lang/en_US.lang
@@ -173,7 +173,7 @@ tile.kekztech_spaceelevatorcapacitor_block.desc=The see-through is good for your
 tile.kekztech_spaceelevatortether_block.name=Space Elevator Tether
 
 # -------- Cosmetic Blocks
-tile.kekztech_largehextile_block=Large Hex Tile
+tile.kekztech_largehextile_block.name=Large Hex Tile
 
 # -------- Beam Transmitter
 tile.kekztech_beamtransmitter_block=Beam Transmitter
