use GT_Recipe_Map to add generator recipes

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -7,3 +7,5 @@ item.highDensityUraniumNugget.name=High Density Uranium Nugget
 item.highDensityUranium.name=High Density Uranium
 
 itemGroup.Good Generator=Good Generator
+
+tile.recipe.naquadah_reactor=Large Naquadah Reactor
