--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -1,6 +1,7 @@
 
 MAR_Casing.0.name=Field Restricting Casing
 radiationProtectionSteelFrame.0.name=Radiation Protection Steel Frame Box
+fieldRestrictingGlass.0.name=Field Restricting Glass
 
 item.radiationProtectionPlate.name=Radiation Protection Plate
 item.wrappedUraniumIngot.name=Wrapped Uranium Ingot
@@ -13,6 +14,32 @@ item.wrappedPlutoniumIngot.name=Wrapped Plutonium Ingot
 item.highDensityPlutoniumNugget.name=High Density Plutonium Nugget
 item.highDensityPlutonium.name=High Density Plutonium
 item.rawAtomicSeparationCatalyst.name=Raw Atomic Separation Catalyst
+
+fluid.lightlyCrackedNaquadahGas=Lightly Cracked Naquadah Gas
+fluid.moderatelyCrackedNaquadahGas=Moderately Cracked Naquadah Gas
+fluid.heavilyCrackedNaquadahGas=Heavily Cracked Naquadah Gas
+fluid.lightlyCrackedLightNaquadahFuel=Lightly Cracked Light Naquadah Fuel
+fluid.moderatelyCrackedLightNaquadahFuel=Moderately Cracked Light Naquadah Fuel
+fluid.heavilyCrackedLightNaquadahFuel=Heavily Cracked Light Naquadah Fuel
+fluid.lightlyCrackedHeavyNaquadahFuel=Lightly Cracked Heavy Naquadah Fuel
+fluid.moderatelyCrackedHeavyNaquadahFuel=Moderately Cracked Heavy Naquadah Fuel
+fluid.heavilyCrackedHeavyNaquadahFuel=Heavily Cracked Heavy Naquadah Fuel
+fluid.lightlyCrackedNaquadahAsphalt=Lightly Cracked Naquadah Asphalt
+fluid.moderatelyCrackedNaquadahAsphalt=Moderately Cracked Naquadah Asphalt
+fluid.heavilyCrackedNaquadahAsphalt=Heavily Cracked Naquadah Asphalt
+
+tile.lightlyCrackedNaquadahGas.name=Lightly Cracked Naquadah Gas
+tile.moderatelyCrackedNaquadahGas.name=Moderately Cracked Naquadah Gas
+tile.heavilyCrackedNaquadahGas.name=Heavily Cracked Naquadah Gas
+tile.lightlyCrackedLightNaquadahFuel.name=Lightly Cracked Light Naquadah Fuel
+tile.moderatelyCrackedLightNaquadahFuel.name=Moderately Cracked Light Naquadah Fuel
+tile.heavilyCrackedLightNaquadahFuel.name=Heavily Cracked Light Naquadah Fuel
+tile.lightlyCrackedHeavyNaquadahFuel.name=Lightly Cracked Heavy Naquadah Fuel
+tile.moderatelyCrackedHeavyNaquadahFuel.name=Moderately Cracked Heavy Naquadah Fuel
+tile.heavilyCrackedHeavyNaquadahFuel.name=Heavily Cracked Heavy Naquadah Fuel
+tile.lightlyCrackedNaquadahAsphalt.name=Lightly Cracked Naquadah Asphalt
+tile.moderatelyCrackedNaquadahAsphalt.name=Moderately Cracked Naquadah Asphalt
+tile.heavilyCrackedNaquadahAsphalt.name=Heavily Cracked Naquadah Asphalt
 
 itemGroup.Good Generator=Good Generator
 
