--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -1,7 +1,11 @@
 
 MAR_Casing.0.name=Field Restriction Casing
 radiationProtectionSteelFrame.0.name=Radiation Proof Steel Frame Box
-fieldRestrictingGlass.0.name=Field Proof Glass
+fieldRestrictingGlass.0.name=Field Restriction Glass
+FRF_Coil_1.0.name=Field Restriction Coil
+FRF_Coil_2.0.name=Advanced Field Restriction Coil
+FRF_Coil_3.0.name=Ultimate Field Restriction Coil
+FRF_Casing.0.name=Naquadah Fuel Refine Factory Casing
 
 item.radiationProtectionPlate.name=Radiation Proof Plate
 item.wrappedUraniumIngot.name=Wrapped Uranium Ingot
