add recipe check for FRF

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -48,3 +48,4 @@ tile.heavilyCrackedNaquadahAsphalt.name=Severely Cracked Naquadah Asphalt
 itemGroup.Good Generator=Good Generator
 
 tile.recipe.naquadah_reactor=Large Naquadah Reactor
+tile.naquadah_fuel_refine_factory=Naquadah Fuel Refine Factory
