add chemical recipe for quicklime and centrifuge recipe for radioactive sludge

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -19,6 +19,7 @@ item.highDensityPlutoniumNugget.name=High Density Plutonium Nugget
 item.highDensityPlutonium.name=High Density Plutonium
 item.rawAtomicSeparationCatalyst.name=Raw Atomic Separation Catalyst
 item.advancedRadiationProtectionPlate.name=Advanced Radiation Proof Plate
+item.chromaticGem.name=Chromatic Gem
 
 fluid.lightlyCrackedNaquadahGas=Lightly Cracked Naquadah Gas
 fluid.moderatelyCrackedNaquadahGas=Moderately Cracked Naquadah Gas
