--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -6,6 +6,7 @@ FRF_Coil_1.0.name=Field Restriction Coil
 FRF_Coil_2.0.name=Advanced Field Restriction Coil
 FRF_Coil_3.0.name=Ultimate Field Restriction Coil
 FRF_Casing.0.name=Naquadah Fuel Refine Factory Casing
+titaniumPlatedCylinder.0.name=Titanium Plated Cylinder
 
 item.radiationProtectionPlate.name=Radiation Proof Plate
 item.wrappedUraniumIngot.name=Wrapped Uranium Ingot
