--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -52,3 +52,17 @@ itemGroup.Good Generator=Good Generator
 
 tile.recipe.naquadah_reactor=Large Naquadah Reactor
 tile.naquadah_fuel_refine_factory=Naquadah Fuel Refine Factory
+
+achievement.gt.blockmachines.nag=Large Naquadah Reactor
+achievement.gt.blockmachines.nag.desc=Pickup this item to see the recipe in NEI
+achievement.gt.blockmachines.frf=Naquadah Fuel Refine Factory
+achievement.gt.blockmachines.frf.desc=Pickup this item to see the recipe in NEI
+achievement.FRF_Casing.0=Naquadah Fuel Refine Factory Casing
+achievement.FRF_Casing.0.desc=Pickup this item to see the recipe in NEI
+achievement.FRF_Coil_1.0=Field Restriction Coil
+achievement.FRF_Coil_1.0.desc=Pickup this item to see the recipe in NEI
+achievement.FRF_Coil_2.0=Advanced Field Restriction Coil
+achievement.FRF_Coil_2.0.desc=Pickup this item to see the recipe in NEI
+achievement.FRF_Coil_3.0=Ultimate Field Restriction Coil
+achievement.FRF_Coil_3.0.desc=Pickup this item to see the recipe in NEI
+
