--- a/src/main/resources/assets/gtneioreplugin/lang/zh_CN.lang
+++ b/src/main/resources/assets/gtneioreplugin/lang/zh_CN.lang
@@ -35,12 +35,40 @@ gtnop.nei.genPositionInfo=各个区块的正中心
 
 
 # world names
-gtnop.world.overworld.name=主世界
-gtnop.world.nether.name=下界
-gtnop.world.end.name=末地
-gtnop.world.moon.name=月球
-gtnop.world.mars.name=火星
-gtnop.world.asteroid.name=星系mod小行星带
+gtnop.world.Overworld=主世界
+gtnop.world.Nether=下界
+gtnop.world.TheEnd=末地
+gtnop.world.Twilight=暮色森林
+gtnop.world.EndAsteroid=末地小行星
+gtnop.world.Moon=月球
+gtnop.world.Mars=火星
+gtnop.world.Phobos=火卫一
+gtnop.world.Deimos=火卫二
+gtnop.world.Asteroids=小行星带
+gtnop.world.Ceres=谷神星
+gtnop.world.Europa=木卫二
+gtnop.world.Ganymede=木卫三
+gtnop.world.Callisto=木卫四
+gtnop.world.Io=木卫一
+gtnop.world.Venus=金星
+gtnop.world.Mercury=水星
+gtnop.world.Enceladus=土卫二
+gtnop.world.Titan=土卫六
+gtnop.world.Miranda=天卫五
+gtnop.world.Oberon=天卫四
+gtnop.world.Proteus=海卫八
+gtnop.world.Triton=海卫一
+gtnop.world.Pluto=冥王星
+gtnop.world.Kuiperbelt=柯伊伯带
+gtnop.world.Haumea=妊神星
+gtnop.world.MakeMake=鸟神星
+gtnop.world.CentauriA=半人马Bb
+gtnop.world.VegaB=织女B
+gtnop.world.BarnardC=巴纳德C
+gtnop.world.BarnardE=巴纳德E
+gtnop.world.BarnardF=巴纳德F
+gtnop.world.TcetiE=鲸鱼座T星E
+gtnop.world.Underdark=漆黑世界
 
 
 # biome names
