--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -6,6 +6,7 @@ FRF_Coil_1.0.name=Field Restriction Coil
 FRF_Coil_2.0.name=Advanced Field Restriction Coil
 FRF_Coil_3.0.name=Ultimate Field Restriction Coil
 FRF_Casing.0.name=Naquadah Fuel Refine Factory Casing
+rawCylinder.0.name=Raw Cylinder
 titaniumPlatedCylinder.0.name=Titanium Plated Cylinder
 
 item.radiationProtectionPlate.name=Radiation Proof Plate
@@ -21,6 +22,9 @@ item.highDensityPlutonium.name=High Density Plutonium
 item.rawAtomicSeparationCatalyst.name=Raw Atomic Separation Catalyst
 item.advancedRadiationProtectionPlate.name=Advanced Radiation Proof Plate
 item.chromaticGem.name=Chromatic Gem
+item.aluminumNitride.name=Aluminum Nitride Dust
+item.specialCeramics.name=Special Ceramics Dust
+item.specialCeramicsPlate.name=Special Ceramics Plate
 
 fluid.lightlyCrackedNaquadahGas=Lightly Cracked Naquadah Gas
 fluid.moderatelyCrackedNaquadahGas=Moderately Cracked Naquadah Gas
