add "Vanilla EndAsteroids" and delete vein names in zh_CN

--- a/src/main/resources/assets/gtneioreplugin/lang/en_US.lang
+++ b/src/main/resources/assets/gtneioreplugin/lang/en_US.lang
@@ -40,6 +40,7 @@ gtnop.world.Nether=Nether
 gtnop.world.TheEnd=TheEnd
 gtnop.world.Twilight=Twilight Forrest
 gtnop.world.EndAsteroid=Far End Asteroids
+gtnop.world.Vanilla EndAsteroids=Vanilla EndAsteroids
 gtnop.world.Moon=Moon
 gtnop.world.Mars=Mars
 gtnop.world.Phobos=Phobos
