--- a/src/main/resources/assets/gtneioreplugin/lang/zh_CN.lang
+++ b/src/main/resources/assets/gtneioreplugin/lang/zh_CN.lang
@@ -40,6 +40,7 @@ gtnop.world.Nether=下界
 gtnop.world.TheEnd=末地
 gtnop.world.Twilight=暮色森林
 gtnop.world.EndAsteroid=末地小行星
+gtnop.world.Vanilla EndAsteroids=原版末地小行星
 gtnop.world.Moon=月球
 gtnop.world.Mars=火星
 gtnop.world.Phobos=火卫一
@@ -83,50 +84,3 @@ gtnop.ore.null.name=无
 gtnop.ore.vein.name=矿脉
 gtnop.ore.asteroid.name=小行星
 gtnop.ore.custom.name=自定义
-
-
-# vein names
-# gregtech5.09
-gtnop.ore.mix.naquadah=硅岩
-gtnop.ore.mix.lignite=褐煤
-gtnop.ore.mix.coal=煤
-gtnop.ore.mix.magnetite=磁铁
-gtnop.ore.mix.gold=金
-gtnop.ore.mix.iron=铁
-gtnop.ore.mix.cassiterite=锡石
-gtnop.ore.mix.tetrahedrite=黝铜
-gtnop.ore.mix.netherquartz=下届石英
-gtnop.ore.mix.sulfur=硫
-gtnop.ore.mix.copper=铜
-gtnop.ore.mix.bauxite=铝土
-gtnop.ore.mix.salts=岩盐
-gtnop.ore.mix.redstone=红石
-gtnop.ore.mix.soapstone=皂石
-gtnop.ore.mix.nickel=镍
-gtnop.ore.mix.platinum=铂
-gtnop.ore.mix.pitchblende=沥青铀
-gtnop.ore.mix.uranium=铀
-gtnop.ore.mix.monazite=独居石
-gtnop.ore.mix.molybdenum=钼
-gtnop.ore.mix.tungstate=钨酸盐
-gtnop.ore.mix.sapphire=蓝宝石
-gtnop.ore.mix.manganese=锰
-gtnop.ore.mix.quartz=石英岩
-gtnop.ore.mix.diamond=钻石
-gtnop.ore.mix.olivine=橄榄石
-gtnop.ore.mix.apatite=磷灰石
-gtnop.ore.mix.galena=方铅矿
-gtnop.ore.mix.lapis=青金石
-gtnop.ore.mix.beryllium=铍
-gtnop.ore.mix.oilsand=油砂
-
-# gregtech5.08
-gtnop.ore.mix.plutonium=钚
-
-# gregtech6
-gtnop.ore.mix.iodinesalt=Iodinesalt
-gtnop.ore.mix.rocksalt=岩盐
-gtnop.ore.mix.asbestos=石棉
-gtnop.ore.mix.titanium=钛
-gtnop.ore.mix.garnet=石榴石
-gtnop.ore.mix.dolamide=Dolamide
