--- a/src/main/resources/assets/gtneioreplugin/lang/en_US.lang
+++ b/src/main/resources/assets/gtneioreplugin/lang/en_US.lang
@@ -63,7 +63,7 @@ gtnop.world.Pluto=Pluto
 gtnop.world.Kuiperbelt=Kuiperbelt
 gtnop.world.Haumea=Haumea
 gtnop.world.MakeMake=MakeMake
-gtnop.world.CentauriA=CentauriA
+gtnop.world.CentauriA=αCentauriBb
 gtnop.world.VegaB=VegaB
 gtnop.world.BarnardC=BarnardC
 gtnop.world.BarnardE=BarnardE
