add blocks for LargeEssentiaGenerator

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -8,6 +8,10 @@ FRF_Coil_3.0.name=Ultimate Field Restriction Coil
 FRF_Casing.0.name=Naquadah Fuel Refine Factory Casing
 rawCylinder.0.name=Raw Cylinder
 titaniumPlatedCylinder.0.name=Titanium Plated Cylinder
+magicCasing.0.name=Magic Casing
+essentiaCell.0.name=Novice Essentia Diffusion Cell
+essentiaCell.1.name=Adept Essentia Diffusion Cell
+essentiaCell.2.name=Master Essentia Diffusion Cell
 
 item.radiationProtectionPlate.name=Radiation Proof Plate
 item.wrappedUraniumIngot.name=Wrapped Uranium Ingot
@@ -76,7 +80,7 @@ MultiNqGenerator.hint.0=6x TungstenSteel Pipe Casing
 MultiNqGenerator.hint.1=48x Field Restriction Casing
 MultiNqGenerator.hint.2=36x Radiation Proof Steel Frame Box
 MultiNqGenerator.hint.3=At least 77x Radiation Proof Machine Casing
-MultiNqGenerator.hint.4=1~3x Input Hatch
+MultiNqGenerator.hint.4=1~4x Input Hatch
 MultiNqGenerator.hint.5=0~1x Output Hatch
 MultiNqGenerator.hint.6=1x Maintenance Hatch
 MultiNqGenerator.hint.7=1x Dynamo Hatch
