--- a/src/main/resources/assets/kekztech/lang/zh_CN.lang
+++ b/src/main/resources/assets/kekztech/lang/zh_CN.lang
@@ -117,33 +117,21 @@ tile.kekztech_tfftstoragefieldblock2_block.name=T.F.F.T存储库方块(T2)
 tile.kekztech_tfftstoragefieldblock3_block.name=T.F.F.T存储库方块(T3)
 tile.kekztech_tfftstoragefieldblock4_block.name=T.F.F.T存储库方块(T4)
 tile.kekztech_tfftstoragefieldblock5_block.name=T.F.F.T存储库方块(T5)
-tile.kekztech_tfftmultihatch_block.name=T.F.F.T流体输入/出仓
-tile.kekztech_tfftmultihatch_block.0.desc=T.F.F.T的特殊仓室
-tile.kekztech_tfftmultihatch_block.1.desc=可以通过此方块与所有存储的流体进行自动交互
-tile.kekztech_tfftmultihatch_block.2.desc=手持螺丝刀右键以启用自动输出
-tile.kekztech_tfftmultihatch_block.3.desc=自动输出将会尝试向相邻储罐以每种流体1000L/s的速度输出流体
-
-# -------- Item Server: Structure Blocks
-tile.kekztech_itemserverdrive_block.name=物流服务器驱动器
-tile.kekztech_itemserverdrive_block.0.desc=物流服务器的存储驱动器
-tile.kekztech_itemserverrackcasing_block.name=物流服务器外壳
-tile.kekztech_itemserverrackcasing_block.0.desc=崭新闪亮的服务器外壳
-tile.kekztech_itemserverioport_block.name=物流服务器输入/出总线
-tile.kekztech_itemserverioport_block.0.desc=用于与物流服务器交互的输入/出端口
-
-# -------- Item Server: Crafting Components
-item.kekztech_crafting_item.16.name=物流刀片服务器
+tile.kekztech_tfftmultihatch_block.0.name=[已弃用]T.F.F.T输入/输出仓(Tier I)
+tile.kekztech_tfftmultihatch_block.1.name=[已弃用]T.F.F.T输入/输出仓(Tier II)
+tile.kekztech_tfftmultihatch_block.2.name=[已弃用]T.F.F.T输入/输出仓(Tier III)
+tile.kekztech_tfftmultihatch_block.0.desc=放入合成栏以升级
 
 # -------- Item Proxy: Structure Blocks
 tile.kekztech_itemproxycable_block.name=物流网络线缆
 tile.kekztech_itemproxycable_block.0.desc=连接物流网络节点
 tile.kekztech_itemproxysource_block.name=物流网络源
 tile.kekztech_itemproxysource_block.0.desc=指向容器/存储, 充当物流网络的源头
-tile.kekztech_itemproxysource_block.1.desc=插入集成电路以设置网络频道
+tile.kekztech_itemproxysource_block.1.desc=插入编程电路以设置网络频道
 tile.kekztech_itemproxysource_block.2.desc=同一网络中只有一个源可以使用一个频道
 tile.kekztech_itemproxyendpoint_block.name=物流网络终端
 tile.kekztech_itemproxyendpoint_block.0.desc=将标记的一面指向你需要物流网络提供物品的地方
-tile.kekztech_itemproxyendpoint_block.1.desc=插入集成电路以设置网络频道
+tile.kekztech_itemproxyendpoint_block.1.desc=插入编程电路以设置网络频道
 
 # -------- Lapotronic Super Capacitor: Structure Blocks
 tile.kekztech_lapotronicenergyunit_block.0.name=兰波顿超级电容机械方块
@@ -152,6 +140,8 @@ tile.kekztech_lapotronicenergyunit_block.2.name=兰波顿电容(LuV)
 tile.kekztech_lapotronicenergyunit_block.3.name=兰波顿电容(ZPM)
 tile.kekztech_lapotronicenergyunit_block.4.name=兰波顿电容(UV)
 tile.kekztech_lapotronicenergyunit_block.5.name=终极电容(UHV)
+tile.kekztech_lapotronicenergyunit_block.6.name=空电容(-)
+tile.kekztech_lapotronicenergyunit_block.7.name=兰波顿电容(EV)
 tile.kekztech_lapotronicenergyunit_block.desc=兰波顿超级电容库的组成部分
 
 # -------- Thaumium Reinforced Jar: Block
@@ -161,7 +151,7 @@ tile.kekztech_thaumiumreinforcedjar_block.3.name=神秘虚空罐子
 # -------- Thaumium Reinforced Jar: Research
 # This is the name of the research
 tc.research_name.THAUMIUMREINFORCEDJAR=神秘源质罐子
-# This is the subtext for the research note (I think)
+# This is the subtext for the research note
 tc.research_text.THAUMIUMREINFORCEDJAR=略好的罐子
 # Lore text for the research pages
 kekztech.research_page.THAUMIUMREINFORCEDJAR.0=你曾听你的神秘使伙伴谈起过数字化源质存储的便利.<BR><BR>为高阶注魔存储足够的源质,你现在面临着同样的问题.但是这些源质罐子实在太讨人喜欢了,你甚至没有考虑用某种更紧凑的技术结构来代替它们.<BR><BR>随着研究的深入,你发现有了一层厚厚的神秘锭内衬,罐子的容量可以变为原来的4倍.要是有充足的时间,你相信还有更好的解决方式.
@@ -175,4 +165,28 @@ tile.kekztech_ichorjar_block.3.name=灵液虚空罐子
 tc.research_name.ICHORJAR=灵液源质罐子
 tc.research_text.ICHORJAR=非常好的罐子
 kekztech.research_page.ICHORJAR.0=就是这个!<BR><BR>将一点灵液注魔进源质罐子,你获得了可以与数字化源质存储相匹敌,同时还不用牺牲美感的新罐子.<BR><BR>灵液源质罐子可以装下惊人的4096点源质,非常适合你刚解锁的这些基于灵液的注魔.<BR><BR>你绝对不会想打扰这些罐子的.不过幸运的是,灵液源质罐子拥有足够的柔韧性,不太容易被误操作摧毁.
+
+# -------- Space Elevator: Block
+tile.kekztech_spaceelevator_block.0.name=太空电梯基座
+tile.kekztech_spaceelevator_block.1.name=太空电梯线圈
+tile.kekztech_spaceelevator_block.desc=太空电梯基站的一部分
+tile.kekztech_spaceelevatorcapacitor_block.name=太空电梯电容
+tile.kekztech_spaceelevatorcapacitor_block.desc=透视对你的FPS有好处!
+tile.kekztech_spaceelevatortether_block.name=太空电梯线缆
+
+# -------- Cosmetic Blocks
+tile.kekztech_largehextile_block.name=大六角瓷砖
+
+# -------- Beam Transmitter
+tile.kekztech_beamtransmitter_block=光束发射器
+
+# -------- Achievements
+achievement.tile.kekztech_lapotronicenergyunit_block.2.desc=捡起这个物品以在NEI内查看配方
+achievement.tile.kekztech_lapotronicenergyunit_block.2=兰波顿电容(LuV)
+achievement.tile.kekztech_lapotronicenergyunit_block.3.desc=捡起这个物品以在NEI内查看配方
+achievement.tile.kekztech_lapotronicenergyunit_block.3=兰波顿电容(ZPM)
+achievement.tile.kekztech_lapotronicenergyunit_block.4.desc=捡起这个物品以在NEI内查看配方
+achievement.tile.kekztech_lapotronicenergyunit_block.4=兰波顿电容(UV)
+achievement.tile.kekztech_lapotronicenergyunit_block.5.desc=捡起这个物品以在NEI内查看配方
+achievement.tile.kekztech_lapotronicenergyunit_block.5=终极电容(UHV)
 
