--- a/src/main/resources/assets/detravscannermod/lang/zh_CN.lang
+++ b/src/main/resources/assets/detravscannermod/lang/zh_CN.lang
@@ -1,6 +1,6 @@
 detrav.scanner.mode.0=设置模式：矿石
 detrav.scanner.mode.1=设置模式：矿石(含贫瘠矿石)
-detrav.scanner.mode.2=设置模式：原油
+detrav.scanner.mode.2=设置模式：地下流体
 detrav.scanner.mode.3=设置模式：污染
 detrav.scanner.mode.error=设置模式：错误
 
@@ -29,8 +29,9 @@ detrav.scanner.prospecting=正在勘探
 tooltip.detrav.scanner.durability=耐久：
 tooltip.detrav.scanner.range=勘探范围(区块)：
 tooltip.detrav.scanner.usage.0=右键岩石方块以勘探当前区块!
-tooltip.detrav.scanner.usage.1=右键基岩以勘探原油!
+tooltip.detrav.scanner.usage.1=右键基岩以勘探地下流体!
 tooltip.detrav.scanner.usage.2=右键空气进行全范围扫描!
+tooltip.detrav.scanner.usage.3=双击任何条目以反转背景颜色!
 tooltip.detrav.scanner.success.chance=扫描成功几率：
 tooltip.detrav.scanner.distance.0=在你旁边(距离0区块), 离你很近(1-2)
 tooltip.detrav.scanner.distance.1=中等距离(3-5), 长距离(6-8), 很远(9+)
