--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -44,6 +44,43 @@ fluid.lightlyCrackedNaquadahAsphalt=Lightly Cracked Naquadah Asphalt
 fluid.moderatelyCrackedNaquadahAsphalt=Moderately Cracked Naquadah Asphalt
 fluid.heavilyCrackedNaquadahAsphalt=Severely Cracked Naquadah Asphalt
 fluid.combustionPromotor=Combustion Promoter
+fluid.Naquadah Based Liquid Fuel MkI (Depleted)=Naquadah Based Liquid Fuel MkI (Depleted)
+fluid.Acid Naquadah Emulsion=Acid Naquadah Emulsion
+fluid.Antimony Pentafluoride=Antimony Pentafluoride
+fluid.Naquadah Solution=Naquadah Solution
+fluid.Thorium Based Liquid Fuel (Excited State)=Thorium Based Liquid Fuel (Excited State)
+fluid.Naquadah Based Liquid Fuel MkV=Naquadah Based Liquid Fuel MkV
+fluid.Fluoroantimonic Acid=Fluoroantimonic Acid
+fluid.Thorium Tetrafluoride=Thorium Tetrafluoride
+fluid.Thorium-232 Tetrafluoride=Thorium-232 Tetrafluoride
+fluid.Naquadah Based Liquid Fuel MkII (Depleted)=Naquadah Based Liquid Fuel MkII (Depleted)
+fluid.Ether=Ether
+fluid.Naquadah Based Liquid Fuel MkIV=Naquadah Based Liquid Fuel MkIV
+fluid.Thorium Based Liquid Fuel=Thorium Based Liquid Fuel
+fluid.Antimony Pentachloride Solution=Antimony Pentachloride Solution
+fluid.Naquadah Based Liquid Fuel MkIII (Depleted)=Naquadah Based Liquid Fuel MkIII (Depleted)
+fluid.Naquadah Based Liquid Fuel MkV (Depleted)=Naquadah Based Liquid Fuel MkV (Depleted)
+fluid.Heavy Naquadah Fuel=Heavy Naquadah Fuel
+fluid.Antimony Pentachloride=Antimony Pentachloride
+fluid.Light Naquadah Fuel=Light Naquadah Fuel
+fluid.Plutonium Based Liquid Fuel (Excited State)=Plutonium Based Liquid Fuel (Excited State)
+fluid.Uranium Based Liquid Fuel (Depleted)=Uranium Based Liquid Fuel (Depleted)
+fluid.Thorium Nitrate=Thorium Nitrate
+fluid.Naquadah Based Liquid Fuel MkIII=Naquadah Based Liquid Fuel MkIII
+fluid.Naquadah Asphalt=Naquadah Asphalt
+fluid.Naquadah Based Liquid Fuel MkI=Naquadah Based Liquid Fuel MkI
+fluid.Antimony Trichloride Solution=Antimony Trichloride Solution
+fluid.Naquadah Gas=Naquadah Gas
+fluid.Naquadah Based Liquid Fuel MkII=Naquadah Based Liquid Fuel MkII
+fluid.Oxalate=Oxalate
+fluid.Uranium Based Liquid Fuel=Uranium Based Liquid Fuel
+fluid.Naquadah Emulsion=Naquadah Emulsion
+fluid.Plutonium Based Liquid Fuel=Plutonium Based Liquid Fuel
+fluid.Plutonium Based Liquid Fuel (Depleted)=Plutonium Based Liquid Fuel (Depleted)
+fluid.Naquadah Based Liquid Fuel MkIV (Depleted)=Naquadah Based Liquid Fuel MkIV (Depleted)
+fluid.Thorium Based Liquid Fuel (Depleted)=Thorium Based Liquid Fuel (Depleted)
+fluid.thorium Tetrachloride=Thorium Tetrachloride
+fluid.Uranium Based Liquid Fuel (Excited State)=Uranium Based Liquid Fuel (Excited State)
 
 tile.lightlyCrackedNaquadahGas.name=Lightly Cracked Naquadah Gas
 tile.moderatelyCrackedNaquadahGas.name=Moderately Cracked Naquadah Gas
