--- a/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
+++ b/src/main/resources/assets/goodgenerator/lang/zh_CN.lang
@@ -106,14 +106,14 @@ value.naquadah_reactor=基础输出电压：
 value.naquadah_fuel_refine_factory.0=要求等级
 value.naquadah_fuel_refine_factory.1=线圈
 
-FuelRefineFactory.hint.0=8x立场约束玻璃
+FuelRefineFactory.hint.0=8x力场约束玻璃
 FuelRefineFactory.hint.1=32x力场约束线圈(任意等级)
 FuelRefineFactory.hint.2=104x硅岩燃料精炼机械方块(至少！)
 FuelRefineFactory.hint.3=1~16x输入仓
 FuelRefineFactory.hint.4=1~16x输出仓
 FuelRefineFactory.hint.5=1~16x输入总线
 FuelRefineFactory.hint.6=1~16x能源仓
-FuelRefineFactory.hint.7=所有仓室必须与立场约束玻璃相邻
+FuelRefineFactory.hint.7=所有仓室必须与力场约束玻璃相邻
 MultiNqGenerator.hint.0=6x钨钢管道方块
 MultiNqGenerator.hint.1=48x力场约束机械方块
 MultiNqGenerator.hint.2=36x防辐射钢框架
