--- a/src/main/resources/assets/detravscannermod/lang/zh_CN.lang
+++ b/src/main/resources/assets/detravscannermod/lang/zh_CN.lang
@@ -4,20 +4,20 @@ detrav.scanner.mode.2=设置模式：地下流体
 detrav.scanner.mode.3=设置模式：污染
 detrav.scanner.mode.error=设置模式：错误
 
-detrav.scanner.distance.texts.0= 位于当前区块， 
-detrav.scanner.distance.texts.1= 距离1-2区块， 
-detrav.scanner.distance.texts.2= 距离3-5区块， 
-detrav.scanner.distance.texts.3= 距离6-8区块， 
-detrav.scanner.distance.texts.4= 距离9区块及以上，
+detrav.scanner.distance.texts.0= §n位于当前区块§r， 
+detrav.scanner.distance.texts.1= §n距离1-2区块§r， 
+detrav.scanner.distance.texts.2= §n距离3-5区块§r， 
+detrav.scanner.distance.texts.3= §n距离6-8区块§r， 
+detrav.scanner.distance.texts.4= §n距离9区块及以上§r，
 
 detrav.scanner.small_ore.keyword=贫瘠
 
 detrav.scanner.found.texts.0=没有发现矿石
-detrav.scanner.found.texts.1= 零星(1-9).
-detrav.scanner.found.texts.2= 少量(10-29).
-detrav.scanner.found.texts.3= 中等(30-59).
-detrav.scanner.found.texts.4= 较多(60-99).
-detrav.scanner.found.texts.5= 极多(100+).
+detrav.scanner.found.texts.1= §8零星(1-9)§r.
+detrav.scanner.found.texts.2= §7少量(10-29)§r.
+detrav.scanner.found.texts.3= §2中等(30-59)§r.
+detrav.scanner.found.texts.4= §e较多(60-99)§r.
+detrav.scanner.found.texts.5= §d极多(100+)§r.
 detrav.scanner.found.texts.6=发现
 
 # Don't translate "%badluck"
