--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -34,6 +34,7 @@ item.chromaticGem.name=Chromatic Gem
 item.aluminumNitride.name=Aluminum Nitride Dust
 item.specialCeramics.name=Special Ceramics Dust
 item.specialCeramicsPlate.name=Special Ceramics Plate
+item.radioactiveWaste.name=Radioactive Waste
 
 #Fluids
 fluid.lightlyCrackedNaquadahGas=Lightly Cracked Naquadah Gas
