update TecTech lib

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -161,7 +161,8 @@ LargeEssentiaGenerator.hint.0=25x Any Essentia Cell
 LargeEssentiaGenerator.hint.1=4x Amber Bricks
 LargeEssentiaGenerator.hint.2=24x Arcane Stone Bricks
 LargeEssentiaGenerator.hint.3=At least 53x Magic Casings
-LargeEssentiaGenerator.hint.4=1 - Maintenance Hatch/Input Hatch/Dynamo Hatch/Essentia Input Hatch
+LargeEssentiaGenerator.hint.4=1x Dynamo Hatch
+LargeEssentiaGenerator.hint.5=1 - Maintenance Hatch/Input Hatch/Dynamo Hatch/Essentia Input Hatch
 NeutronActivator.hint.0=16x Steel Frame Boxes
 NeutronActivator.hint.1=18x Processor Machine Casings
 NeutronActivator.hint.2=32x Reinforced Glasses
