--- a/src/resources/assets/miscutils/lang/zh_CN.lang
+++ b/src/resources/assets/miscutils/lang/zh_CN.lang
@@ -55,7 +55,7 @@ item.MiscUtils.material.dustCryotheum.name=凛冰之尘
 item.MiscUtils.material.rodBlizz.name=暴雪棒
 item.MiscUtils.material.dustBlizz.name=暴雪粉
 
-//============= 'miscutils' is Case Sensitive Here, unsure why
+//==============
 tile.miscutils.fluid.pyrotheum.name=烈焰之炽焱
 tile.miscutils.fluid.cryotheum.name=极寒之凛冰
 tile.miscutils.fluid.ender.name=谐振熔融末影珍珠
@@ -2659,21 +2659,21 @@ item.particle.ion.Fermium.name=镄离子
 item.particle.ion.Mendelevium.name=钔离子
 item.particle.ion.Nobelium.name=锘离子
 item.particle.ion.Lawrencium.name=铹离子
-item.particle.ion.Rutherfordium.name=𬬻离子
-item.particle.ion.Dubnium.name=𬭊离子
-item.particle.ion.Seaborgium.name=𨭎离子
-item.particle.ion.Bohrium.name=𬭛离子
-item.particle.ion.Hassium.name=𬭶离子
+item.particle.ion.Rutherfordium.name=离子
+item.particle.ion.Dubnium.name=离子
+item.particle.ion.Seaborgium.name=离子
+item.particle.ion.Bohrium.name=离子
+item.particle.ion.Hassium.name=离子
 item.particle.ion.Meitnerium.name=鿏离子
-item.particle.ion.Darmstadtium.name=𫟼离子
-item.particle.ion.Roentgenium.name=𬬭离子
+item.particle.ion.Darmstadtium.name=离子
+item.particle.ion.Roentgenium.name=离子
 item.particle.ion.Copernicium.name=鿔离子
-item.particle.ion.Nihonium.name=鉨离子
-item.particle.ion.Flerovium.name=𫓧(鈇)离子
+item.particle.ion.Nihonium.name=鿭离子
+item.particle.ion.Flerovium.name=离子
 item.particle.ion.Moscovium.name=镆离子
-item.particle.ion.Livermorium.name=𫟷离子
-item.particle.ion.Tennessine.name=<石田>离子
-item.particle.ion.Oganesson.name=<气奥>离子
+item.particle.ion.Livermorium.name=离子
+item.particle.ion.Tennessine.name=鿬离子
+item.particle.ion.Oganesson.name=鿫离子
 
 
 item.particle.base.Graviton.name=引力子
